--- a/Hawaii/UI/Storyboard/ProfileManagement/ProfileManagement.storyboard
+++ b/Hawaii/UI/Storyboard/ProfileManagement/ProfileManagement.storyboard
@@ -69,13 +69,6 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5M6-uF-pQE">
-                                        <rect key="frame" x="16" y="16" width="224" height="224"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="5M6-uF-pQE" secondAttribute="height" multiplier="1:1" id="eDy-Je-ZUO"/>
-                                        </constraints>
-                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -83,12 +76,9 @@
                                     <constraint firstItem="urV-Dm-kcq" firstAttribute="top" secondItem="OgK-9v-Yth" secondAttribute="bottom" constant="4" id="3mC-q8-qJL"/>
                                     <constraint firstItem="LSj-3s-v7S" firstAttribute="top" secondItem="vwJ-nM-TYN" secondAttribute="bottom" constant="4" id="FNe-XM-gnx"/>
                                     <constraint firstItem="urV-Dm-kcq" firstAttribute="centerX" secondItem="OgK-9v-Yth" secondAttribute="centerX" id="G5Z-xj-u62"/>
-                                    <constraint firstItem="5M6-uF-pQE" firstAttribute="centerX" secondItem="hwB-ar-bVn" secondAttribute="centerX" id="GGE-cd-kPx"/>
                                     <constraint firstItem="vRl-lt-Hl0" firstAttribute="top" secondItem="doS-Lo-izl" secondAttribute="bottom" constant="4" id="GRE-gF-Tqd"/>
-                                    <constraint firstItem="5M6-uF-pQE" firstAttribute="leading" secondItem="hwB-ar-bVn" secondAttribute="leading" constant="16" id="Ixd-u4-y3f"/>
                                     <constraint firstItem="OgK-9v-Yth" firstAttribute="leading" secondItem="vRl-lt-Hl0" secondAttribute="leading" id="Kmo-eT-gWf"/>
                                     <constraint firstItem="vRl-lt-Hl0" firstAttribute="centerX" secondItem="doS-Lo-izl" secondAttribute="centerX" id="LgN-XP-Cvh"/>
-                                    <constraint firstItem="5M6-uF-pQE" firstAttribute="centerY" secondItem="hwB-ar-bVn" secondAttribute="centerY" id="PJd-vy-PqX"/>
                                     <constraint firstItem="doS-Lo-izl" firstAttribute="top" secondItem="B1j-j0-Dqb" secondAttribute="bottom" constant="16" id="QM1-Ei-z9y"/>
                                     <constraint firstItem="Bud-er-95M" firstAttribute="centerX" secondItem="LSj-3s-v7S" secondAttribute="centerX" id="T4W-XV-6Ta"/>
                                     <constraint firstItem="B1j-j0-Dqb" firstAttribute="leading" secondItem="Bud-er-95M" secondAttribute="leading" id="W2w-H3-Ekj"/>
@@ -109,9 +99,19 @@
                                     <constraint firstItem="Bud-er-95M" firstAttribute="leading" secondItem="LSj-3s-v7S" secondAttribute="leading" id="xTv-ln-46l"/>
                                 </constraints>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5M6-uF-pQE">
+                                <rect key="frame" x="64" y="198" width="192" height="192"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="5M6-uF-pQE" secondAttribute="height" multiplier="1:1" id="eDy-Je-ZUO"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="5M6-uF-pQE" firstAttribute="leading" secondItem="hwB-ar-bVn" secondAttribute="leading" constant="32" id="DLX-qK-k7Y"/>
+                            <constraint firstItem="5M6-uF-pQE" firstAttribute="centerX" secondItem="hwB-ar-bVn" secondAttribute="centerX" id="IVm-oM-lMt"/>
+                            <constraint firstItem="5M6-uF-pQE" firstAttribute="centerY" secondItem="hwB-ar-bVn" secondAttribute="centerY" id="TUa-ap-72m"/>
                             <constraint firstItem="hwB-ar-bVn" firstAttribute="centerX" secondItem="Puj-hy-Rd2" secondAttribute="centerX" id="Zmh-br-Uq5"/>
                             <constraint firstItem="hwB-ar-bVn" firstAttribute="leading" secondItem="Puj-hy-Rd2" secondAttribute="leading" constant="32" id="ley-wf-c24"/>
                             <constraint firstItem="hwB-ar-bVn" firstAttribute="centerY" secondItem="Puj-hy-Rd2" secondAttribute="centerY" id="ne5-Hz-AKN"/>
