--- a/Hawaii/UI/CustomFooter/CustomFooter.xib
+++ b/Hawaii/UI/CustomFooter/CustomFooter.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,12 +34,12 @@
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sgg-gn-sPW">
                                     <rect key="frame" x="0.0" y="40" width="343" height="30"/>
                                     <subviews>
-                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OLD-Oe-uS9">
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oz2-py-1g1">
                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" id="01v-tW-lTs"/>
-                                                <constraint firstAttribute="height" constant="30" id="69U-mZ-lne"/>
+                                                <constraint firstAttribute="height" constant="30" id="1cS-di-RM3"/>
+                                                <constraint firstAttribute="width" id="awU-Fx-N0z"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="progress">
@@ -84,12 +84,12 @@
                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="hideTrack" value="NO"/>
                                             </userDefinedRuntimeAttributes>
                                         </view>
-                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oz2-py-1g1">
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OLD-Oe-uS9">
                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="1cS-di-RM3"/>
-                                                <constraint firstAttribute="width" id="awU-Fx-N0z"/>
+                                                <constraint firstAttribute="width" id="01v-tW-lTs"/>
+                                                <constraint firstAttribute="height" constant="30" id="69U-mZ-lne"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="progress">
@@ -262,12 +262,12 @@
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SMc-F4-KXS">
                                     <rect key="frame" x="0.0" y="40" width="343" height="30"/>
                                     <subviews>
-                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7d5-h1-cFu">
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8gM-6P-vb3">
                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" id="5uI-82-5mR"/>
-                                                <constraint firstAttribute="height" constant="30" id="pie-SB-k0m"/>
+                                                <constraint firstAttribute="width" id="cD0-NU-kMU"/>
+                                                <constraint firstAttribute="height" constant="30" id="cLM-Dr-FnX"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="progress">
@@ -312,12 +312,12 @@
                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="hideTrack" value="NO"/>
                                             </userDefinedRuntimeAttributes>
                                         </view>
-                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8gM-6P-vb3">
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7d5-h1-cFu">
                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" id="cD0-NU-kMU"/>
-                                                <constraint firstAttribute="height" constant="30" id="cLM-Dr-FnX"/>
+                                                <constraint firstAttribute="width" id="5uI-82-5mR"/>
+                                                <constraint firstAttribute="height" constant="30" id="pie-SB-k0m"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="progress">
@@ -496,7 +496,9 @@
                 <outlet property="pendingBarWidth" destination="u2D-V7-1ug" id="Fmc-6B-M1l"/>
                 <outlet property="pendingBarWidthTraining" destination="1hK-nR-d17" id="qTX-Sa-Kt6"/>
                 <outlet property="pendingDayNoLabel" destination="1pr-EC-dID" id="byn-oA-fee"/>
+                <outlet property="pendingDayNoLabelTraining" destination="Cnk-pR-3rq" id="3Q8-DH-cnn"/>
                 <outlet property="pendingDaysLabel" destination="rdu-ZU-fyY" id="EOM-Aa-7Uc"/>
+                <outlet property="pendingDaysLabelTraining" destination="HY9-lX-Xf3" id="vTQ-lJ-eE7"/>
                 <outlet property="pendingLabel" destination="ipj-8L-rlo" id="9w8-LE-ZXd"/>
                 <outlet property="pendingLabelTraining" destination="21X-kF-kfG" id="mng-eA-yoL"/>
                 <outlet property="progressBar" destination="Sgg-gn-sPW" id="mmX-jr-lMS"/>
